# python-qnasite

./: .env.example  README.md  build.sh  pyproject.toml  render.yaml
.github/workflows/: first.yml  main.yml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  register.html
accounts/tests/: test_auth.py
core/: base_test.py  custom_tags.py  db.py
qna/: forms.py  urls.py  views.py
qna/migrations/: 0001_initial.py
qna/models/: answer.py  question.py
qna/templates/: swal_script_for_messages.html
qna/templates/accounts/: login.html  register.html
qna/templates/base/: base.html
qna/templates/qna/: create_question.html  delete_answer.html  delete_question.html  home.html  question_detail.html  update_answer.html  update_question.html
qna/tests/: test_answer.py  test_home.py  test_like.py  test_question.py
qna/views/: answer.py  question.py
qnasite/: asgi.py  settings.py  urls.py  wsgi.py
