[tool.poetry]
name = "qnasite"
version = "0.1.0"
description = "A Django-based Q&A platform inspired by Quora"
authors = ["Poonkawin <poonkawin8484@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
gunicorn = "^23.0.0"
uvicorn = "^0.34.0"
django-environ = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
